--- a/Blog/pom.xml
+++ b/Blog/pom.xml
@@ -9,7 +9,9 @@
     <url>http://maven.apache.org</url>
   
     <properties>
-        <spring.version>4.3.6.RELEASE</spring.version>
+        <spring.version>5.1.9.RELEASE</spring.version>
+        <spring.security.version>5.1.6.RELEASE</spring.security.version>
+        <jackson.version>2.9.10</jackson.version>
         <junit.version>4.12</junit.version>
     </properties>
  
@@ -82,12 +84,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.6.3</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.6.3</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -108,22 +110,22 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>3.2.10.RELEASE</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>3.2.10.RELEASE</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>3.2.10.RELEASE</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
-            <version>3.2.10.RELEASE</version>
+            <version>${spring.security.version}</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
